created tantor email signature

--- a/tantorlearning.html
+++ b/tantorlearning.html
@@ -6,6 +6,53 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <!-- Banner -->
+    <div style="
+        width: 100%;
+        height: 200px;
+        background-image: url('BannerTantorLearning.png');
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    ">  
+    </div>
+
+    <!-- Content Section -->
+    <div style="
+        max-width: 600px;
+        margin: 0 auto;
+        padding: 0 0px;
+    ">
+        <p style="color: rgba(46, 97, 190, 0.60); font-family: Poppins; font-size: 12px; font-weight: 600;">
+            Besoin d’aide ?
+        </p>
+        <p style="color: rgba(0, 0, 0, 0.60); font-family: Poppins; font-size: 12px;">
+            Si vous avez des questions ou besoin d’aide, n’hésitez pas à contacter 
+            <span style="color: rgba(46, 97, 190, 0.60); font-family: Poppins; font-size: 12px;">
+                support@tantorlegal.com
+            </span>
+        </p>
+
+        <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px 0;">
+            <p style="color: rgba(46, 97, 190, 0.60); font-family: Poppins; font-size: 12px;">
+                © 2025 - Tantor Legal
+            </p>
+            <div>
+                <img src="twitter.png" alt="">
+                <img src="facebook.png" alt="">
+                <img src="youtube.png" alt="">
+                <img src="linkdn.png" alt="">
+            </div>
+        </div>
+
+        <p style="text-align: center; color: rgba(0, 0, 0, 0.60); font-family: Poppins; font-size: 11px; line-height: 18px;">
+            Ce message et ses pièces jointes sont confidentiels. Si vous l’avez reçu par erreur, supprimez-le et avertissez l’expéditeur. Merci de ne pas imprimer ce courriel sauf nécessité.
+        </p>
+        <p style="text-align: center; color: rgba(0, 0, 0, 0.60); font-family: Poppins; font-size: 11px; line-height: 18px;">
+            This email and its attachments are confidential. If received in error, delete it and notify the sender. Please avoid printing unless necessary.
+        </p>
+    </div>
+
 </body>
 </html>
