added new images

--- a/tantorlearning.html
+++ b/tantorlearning.html
@@ -11,7 +11,7 @@
     <div style="
         width: 100%;
         height: 200px;
-        background-image: url('BannerTantorLearning.png');
+        background-image: url('BannerAndUserTantorLearning.png');
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
