--- a/tantorlearning.html
+++ b/tantorlearning.html
@@ -6,53 +6,47 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Email Signature -->
+<div style="width:100%; text-align:center;">
+  <div style="display:inline-block; max-width:600px; font-family:Poppins, sans-serif; text-align:left;">
 
-    <!-- Banner -->
-    <div style="
-        width: 100%;
-        height: 200px;
-        background-image: url('BannerAndUserTantorLearning.png');
-        background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
-    ">  
-    </div>
+      <!-- Banner as Image -->
+      <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/BannerAndUserTantorLearning.png" 
+           alt="Tantor Legal Banner" 
+           style="width:100%; max-width:600px; height:auto; display:block;">
 
-    <!-- Content Section -->
-    <div style="
-        max-width: 600px;
-        margin: 0 auto;
-        padding: 0 0px;
-    ">
-        <p style="color: rgba(46, 97, 190, 0.60); font-family: Poppins; font-size: 12px; font-weight: 600;">
-            Besoin d’aide ?
-        </p>
-        <p style="color: rgba(0, 0, 0, 0.60); font-family: Poppins; font-size: 12px;">
-            Si vous avez des questions ou besoin d’aide, n’hésitez pas à contacter 
-            <span style="color: rgba(46, 97, 190, 0.60); font-family: Poppins; font-size: 12px;">
-                support@tantorlegal.com
-            </span>
-        </p>
+      <!-- Help Text -->
+      <p style="color: rgba(46, 97, 190, 0.60); font-size: 12px; font-weight: 600; margin: 8px 0 0;">
+          Besoin d’aide ?
+      </p>
+      <p style="color: rgba(0, 0, 0, 0.60); font-size: 12px; margin: 4px 0;">
+          Si vous avez des questions ou besoin d’aide, n’hésitez pas à contacter 
+          <span style="color: rgba(46, 97, 190, 0.60);">support@tantorlegal.com</span>
+      </p>
 
-        <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px 0;">
-            <p style="color: rgba(46, 97, 190, 0.60); font-family: Poppins; font-size: 12px;">
-                © 2025 - Tantor Legal
-            </p>
-            <div>
-                <img src="twitter.png" alt="">
-                <img src="facebook.png" alt="">
-                <img src="youtube.png" alt="">
-                <img src="linkdn.png" alt="">
-            </div>
-        </div>
+      <!-- Footer -->
+      <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px 0;">
+          <p style="color: rgba(46, 97, 190, 0.60); font-size: 12px; margin: 0;">
+              © 2025 - Tantor Legal
+          </p>
+          <div>
+              <a href="https://twitter.com/"><img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/twitter.png" alt="Twitter" style="height:16px; margin:0 3px;"></a>
+              <a href="https://facebook.com/"><img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/facebook.png" alt="Facebook" style="height:16px; margin:0 3px;"></a>
+              <a href="https://youtube.com/"><img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/youtube.png" alt="YouTube" style="height:16px; margin:0 3px;"></a>
+              <a href="https://linkedin.com/"><img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/linkdn.png" alt="LinkedIn" style="height:16px; margin:0 3px;"></a>
+          </div>
+      </div>
 
-        <p style="text-align: center; color: rgba(0, 0, 0, 0.60); font-family: Poppins; font-size: 11px; line-height: 18px;">
-            Ce message et ses pièces jointes sont confidentiels. Si vous l’avez reçu par erreur, supprimez-le et avertissez l’expéditeur. Merci de ne pas imprimer ce courriel sauf nécessité.
-        </p>
-        <p style="text-align: center; color: rgba(0, 0, 0, 0.60); font-family: Poppins; font-size: 11px; line-height: 18px;">
-            This email and its attachments are confidential. If received in error, delete it and notify the sender. Please avoid printing unless necessary.
-        </p>
-    </div>
+      <!-- Disclaimer -->
+      <p style="text-align: center; color: rgba(0, 0, 0, 0.60); font-size: 11px; line-height: 18px; margin: 4px 0;">
+          Ce message et ses pièces jointes sont confidentiels. Si vous l’avez reçu par erreur, supprimez-le et avertissez l’expéditeur. Merci de ne pas imprimer ce courriel sauf nécessité.
+      </p>
+      <p style="text-align: center; color: rgba(0, 0, 0, 0.60); font-size: 11px; line-height: 18px; margin: 4px 0;">
+          This email and its attachments are confidential. If received in error, delete it and notify the sender. Please avoid printing unless necessary.
+      </p>
+
+  </div>
+</div>
 
 </body>
 </html>
