fix: update image sources to use absolute URLs and adjust text alignment

--- a/user.html
+++ b/user.html
@@ -7,7 +7,7 @@
 </head>
 <body style="padding: 0;">
   <!-- Signature Block -->
-  <div style="text-align:center; padding: 0px;">
+  <div style="padding: 0px;">
     <div style="display:inline-block; max-width:600px; width: 100%; font-family: Arial, sans-serif; font-size:14px; color:#303030; line-height:20px; text-align:left;">
 
       <!-- Main Flex -->
@@ -15,7 +15,7 @@
 
         <!-- Left: Profile Image -->
         <div style="margin-right:15px; flex:0 0 auto;">
-          <img src="UserGroup.png" alt="John Carter" width="100" style="border-radius:10px; display:block;">
+          <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/UserGroup.png" alt="John Carter" width="100" style="border-radius:10px; display:block;">
         </div>
 
         <!-- Right: Info & Logo -->
@@ -31,7 +31,7 @@
 
             <!-- Logo -->
             <div style="flex:0 0 auto; margin-top:4px;">
-              <img src="BlueLogo.png" alt="Tantor Legal" width="120" style="display:block;">
+              <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/BlueLogo.png" alt="Tantor Legal" width="120" style="display:block;">
             </div>
           </div>
 
@@ -74,9 +74,9 @@
    
   </div>
   <!-- Help Section + Footer (unchanged) -->
-  <div style="width:100%; text-align:center;">
+  <div style="width:100%;">
     <div style="display:inline-block; max-width:600px; font-family:Poppins, sans-serif; text-align:left;">
-       <img style="max-width: 600px; width: 100%;" src="Banner.png" alt="">
+       <img style="max-width: 600px; width: 100%;" src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/Banner.png" alt="">
         <p style="color: rgba(46, 97, 190, 0.60); font-size: 12px; font-weight: 600; margin: 8px 0 0;">
           Besoin d’aide ?
       </p>
