Implement code changes to enhance functionality and improve performance

--- a/TantorDec.html
+++ b/TantorDec.html
@@ -11,7 +11,7 @@
     <tr>
       <!-- Left: Profile Image -->
       <td valign="top" style="padding-right:15px;">
-        <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/UserGroup.png" alt="John Carter" width="100" style="border-radius:10px; display:block;">
+        <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/UserGroupGreen.png" alt="John Carter" width="100" style="border-radius:10px; display:block;">
       </td>
 
       <!-- Right: Info & Logo -->
@@ -19,13 +19,13 @@
         <table cellpadding="0" cellspacing="0" border="0" width="100%">
           <tr>
             <!-- Name & Role -->
-            <td valign="top" style="font-size:12px; color:#4a90e2; font-weight:bold;">
+            <td valign="top" style="font-size:12px; color:#5D8D80; font-weight:bold;">
               John Carter<br>
               <span style="font-weight:normal;">VP of Design</span>
             </td>
             <!-- Logo -->
             <td valign="top" align="right">
-              <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/BlueLogo.png" alt="Tantor Legal" width="120" style="display:block;">
+              <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/GreenLogo.png" alt="Tantor Legal" width="120" style="display:block;">
             </td>
           </tr>
         </table>
@@ -39,25 +39,25 @@
         <table cellpadding="0" cellspacing="0" border="0" width="100%">
           <tr>
             <!-- Left: Email & Phone -->
-            <td valign="top" style="font-size:12px; color:#4a90e2;">
+            <td valign="top" style="font-size:12px; color:#5D8D80;">
               <div>
-                <img src="https://img.icons8.com/ios-filled/15/4a90e2/new-post.png" style="vertical-align:middle;">
-                <a href="mailto:john@tantorlegal.com" style="color:#4a90e2; text-decoration:none;">john@tantorlegal.com</a>
+                <img src="https://img.icons8.com/ios-filled/15/5D8D80/new-post.png" style="vertical-align:middle;">
+                <a href="mailto:john@tantorlegal.com" style="color:#5D8D80; text-decoration:none;">john@tantorlegal.com</a>
               </div>
               <div>
-                <img src="https://img.icons8.com/ios-filled/15/4a90e2/phone.png" style="vertical-align:middle;">
-                <a href="tel:3450871239" style="color:#4a90e2; text-decoration:none;">(345) 087 - 1239</a>
+                <img src="https://img.icons8.com/ios-filled/15/5D8D80/phone.png" style="vertical-align:middle;">
+                <a href="tel:3450871239" style="color:#5D8D80; text-decoration:none;">(345) 087 - 1239</a>
               </div>
             </td>
 
             <!-- Right: Website & Location -->
-            <td valign="top" align="right" style="font-size:12px; color:#4a90e2;">
+            <td valign="top" align="right" style="font-size:12px; color:#5D8D80;">
               <div>
-                <img src="https://img.icons8.com/ios-filled/15/4a90e2/domain.png" style="vertical-align:middle;">
-                <a href="http://www.tantorlegal.com" style="color:#4a90e2; text-decoration:none;">www.tantorlegal.com</a>
+                <img src="https://img.icons8.com/ios-filled/15/5D8D80/domain.png" style="vertical-align:middle;">
+                <a href="http://www.tantorlegal.com" style="color:#5D8D80; text-decoration:none;">www.tantorlegal.com</a>
               </div>
               <div>
-                <img src="https://img.icons8.com/ios-filled/15/4a90e2/marker.png" style="vertical-align:middle;">
+                <img src="https://img.icons8.com/ios-filled/15/5D8D80/marker.png" style="vertical-align:middle;">
                 984 Penn Rd. NY 10002
               </div>
             </td>
@@ -71,7 +71,7 @@
   <table cellpadding="0" cellspacing="0" border="0" width="100%" style="max-width:600px;">
     <tr>
       <td>
-        <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/BannerTantorLegal.png" alt="Banner" style="width:100%; display:block;">
+        <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/BannerTantorDec.png" alt="Banner" style="width:100%; display:block;">
       </td>
     </tr>
   </table>
