--- a/TantorCompta.html
+++ b/TantorCompta.html
@@ -11,7 +11,7 @@
     <tr>
       <!-- Left: Profile Image -->
       <td valign="top" style="padding-right:15px;">
-        <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/UserGroupGreen.png" alt="John Carter" width="100" style="border-radius:10px; display:block;">
+        <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/UserGroupBlue.png" alt="John Carter" width="100" style="border-radius:10px; display:block;">
       </td>
 
       <!-- Right: Info & Logo -->
@@ -25,7 +25,7 @@
             </td>
             <!-- Logo -->
             <td valign="top" align="right">
-              <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/GreenLogo.png" alt="Tantor Legal" width="120" style="display:block;">
+              <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/LogoCompta.png" alt="Tantor compta" width="120" style="display:block;">
             </td>
           </tr>
         </table>
@@ -42,7 +42,7 @@
             <td valign="top" style="font-size:12px; color:#5D8D80;">
               <div>
                 <img src="https://img.icons8.com/ios-filled/15/5D8D80/new-post.png" style="vertical-align:middle;">
-                <a href="mailto:john@tantorlegal.com" style="color:#5D8D80; text-decoration:none;">john@tantorlegal.com</a>
+                <a href="mailto:john@tantorcompta.com" style="color:#5D8D80; text-decoration:none;">john@tantorcompta.com</a>
               </div>
               <div>
                 <img src="https://img.icons8.com/ios-filled/15/5D8D80/phone.png" style="vertical-align:middle;">
@@ -54,7 +54,7 @@
             <td valign="top" align="right" style="font-size:12px; color:#5D8D80;">
               <div>
                 <img src="https://img.icons8.com/ios-filled/15/5D8D80/domain.png" style="vertical-align:middle;">
-                <a href="http://www.tantorlegal.com" style="color:#5D8D80; text-decoration:none;">www.tantorlegal.com</a>
+                <a href="http://www.tantorcompta.com" style="color:#5D8D80; text-decoration:none;">www.tantorcompta.com</a>
               </div>
               <div>
                 <img src="https://img.icons8.com/ios-filled/15/5D8D80/marker.png" style="vertical-align:middle;">
@@ -71,7 +71,7 @@
   <table cellpadding="0" cellspacing="0" border="0" width="100%" style="max-width:600px;">
     <tr>
       <td>
-        <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/BannerTantorDec.png" alt="Banner" style="width:100%; display:block;">
+        <img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/BannerTantorCompta.png" alt="Banner" style="width:100%; display:block;">
       </td>
     </tr>
   </table>
@@ -86,7 +86,7 @@
     <tr>
       <td style="color:rgba(0,0,0,0.6); font-size:12px; padding-top:4px;">
         Si vous avez des questions ou besoin d’aide, contactez 
-        <span style="color:rgba(93, 141, 128, 1);">support@tantorlegal.com</span>
+        <span style="color:rgba(93, 141, 128, 1);">support@tantorcompta.com</span>
       </td>
     </tr>
   </table>
@@ -94,7 +94,7 @@
   <!-- Footer -->
   <table cellpadding="0" cellspacing="0" border="0" style="max-width:600px; width:100%; padding:10px 0;">
     <tr>
-      <td style="color:rgba(93, 141, 128, 1); font-size:12px;">© 2025 - Tantor Legal</td>
+      <td style="color:rgba(93, 141, 128, 1); font-size:12px;">© 2025 - Tantor compta</td>
       <td align="right">
         <a href="https://twitter.com/"><img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/twitter.png" alt="Twitter" style="height:16px;"></a>
         <a href="https://facebook.com/"><img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/facebook.png" alt="Facebook" style="height:16px;"></a>
