Add initial HTML structure for email signature demo

--- a/TantorLearning.html
+++ b/TantorLearning.html
@@ -19,7 +19,7 @@
         <table cellpadding="0" cellspacing="0" border="0" width="100%">
           <tr>
             <!-- Name & Role -->
-            <td valign="top" style="font-size:12px; color:#5D8D80; font-weight:bold;">
+            <td valign="top" style="font-size:12px; color:#007AAA; font-weight:bold;">
               John Carter<br>
               <span style="font-weight:normal;">VP of Design</span>
             </td>
@@ -39,25 +39,25 @@
         <table cellpadding="0" cellspacing="0" border="0" width="100%">
           <tr>
             <!-- Left: Email & Phone -->
-            <td valign="top" style="font-size:12px; color:#5D8D80;">
+            <td valign="top" style="font-size:12px; color:#007AAA;">
               <div>
-                <img src="https://img.icons8.com/ios-filled/15/5D8D80/new-post.png" style="vertical-align:middle;">
-                <a href="mailto:john@tantorlearning.com" style="color:#5D8D80; text-decoration:none;">john@tantorlearning.com</a>
+                <img src="https://img.icons8.com/ios-filled/15/007AAA/new-post.png" style="vertical-align:middle;">
+                <a href="mailto:john@tantorlearning.com" style="color:#007AAA; text-decoration:none;">john@tantorlearning.com</a>
               </div>
               <div>
-                <img src="https://img.icons8.com/ios-filled/15/5D8D80/phone.png" style="vertical-align:middle;">
-                <a href="tel:3450871239" style="color:#5D8D80; text-decoration:none;">(345) 087 - 1239</a>
+                <img src="https://img.icons8.com/ios-filled/15/007AAA/phone.png" style="vertical-align:middle;">
+                <a href="tel:3450871239" style="color:#007AAA; text-decoration:none;">(345) 087 - 1239</a>
               </div>
             </td>
 
             <!-- Right: Website & Location -->
-            <td valign="top" align="right" style="font-size:12px; color:#5D8D80;">
+            <td valign="top" align="right" style="font-size:12px; color:#007AAA;">
               <div>
-                <img src="https://img.icons8.com/ios-filled/15/5D8D80/domain.png" style="vertical-align:middle;">
-                <a href="http://www.tantorlearning.com" style="color:#5D8D80; text-decoration:none;">www.tantorlearning.com</a>
+                <img src="https://img.icons8.com/ios-filled/15/007AAA/domain.png" style="vertical-align:middle;">
+                <a href="http://www.tantorlearning.com" style="color:#007AAA; text-decoration:none;">www.tantorlearning.com</a>
               </div>
               <div>
-                <img src="https://img.icons8.com/ios-filled/15/5D8D80/marker.png" style="vertical-align:middle;">
+                <img src="https://img.icons8.com/ios-filled/15/007AAA/marker.png" style="vertical-align:middle;">
                 984 Penn Rd. NY 10002
               </div>
             </td>
@@ -79,14 +79,14 @@
   <!-- Help Section -->
   <table cellpadding="0" cellspacing="0" border="0" style="max-width:600px; width:100%;">
     <tr>
-      <td style="color:rgba(93, 141, 128, 1); font-size:12px; font-weight:600; padding-top:8px;">
+      <td style="color:rgba(0, 122, 170, 1); font-size:12px; font-weight:600; padding-top:8px;">
         Besoin d’aide ?
       </td>
     </tr>
     <tr>
       <td style="color:rgba(0,0,0,0.6); font-size:12px; padding-top:4px;">
         Si vous avez des questions ou besoin d’aide, contactez 
-        <span style="color:rgba(93, 141, 128, 1);">support@tantorlearning.com</span>
+        <span style="color:rgba(0, 122, 170, 1);">support@tantorlearning.com</span>
       </td>
     </tr>
   </table>
@@ -94,7 +94,7 @@
   <!-- Footer -->
   <table cellpadding="0" cellspacing="0" border="0" style="max-width:600px; width:100%; padding:10px 0;">
     <tr>
-      <td style="color:rgba(93, 141, 128, 1); font-size:12px;">© 2025 - Tantor learning</td>
+      <td style="color:rgba(0, 122, 170, 1); font-size:12px;">© 2025 - Tantor learning</td>
       <td align="right">
         <a href="https://twitter.com/"><img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/twitter.png" alt="Twitter" style="height:16px;"></a>
         <a href="https://facebook.com/"><img src="https://raw.githubusercontent.com/nestormuk/EmailSignatureKarim/main/facebook.png" alt="Facebook" style="height:16px;"></a>
